# bb-team-info-by-ingredient

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  summary + nutrients.txt
.github/workflows/: xlsx_to_gdrive.yaml  xlsx_to_gdrive.yml
food/: env_sample  scrapy.cfg
food/food/: create_db.py  db.py  items.py  middlewares.py  models.py  nutrient_headers.py  pipelines.py  settings.py  utils.py
food/food/spiders/: foods.xlsx  hundred_grams.csv  ingredients.csv  ingredients.py  log_ingredients.txt  output.xlsx  requirements.txt  test_hundred_grams.py
