[tool.poetry]
name = "bb-team-info-by-ingredient"
version = "0.1.0"
description = "Scrapy project to get nutritional information about ingredients from BB team.org"
authors = ["Atanas Chebishev <atanas.chebishev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chebishev/bb-team-info-by-ingredient"
repository = "https://github.com/chebishev/bb-team-info-by-ingredient"
documentation = "https://docs.google.com/spreadsheets/d/1y_o9Es5Aajau9ggKZ4CgEE1zYTVhn5Sy/edit?usp=sharing&ouid=115367196449881872914&rtpof=true&sd=true"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scrapy = "2.13.0"
ipython = "9.2.0"
openpyxl = "3.1.5"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"

[tool.black]
exclude = '(\.git|\.mypy_cache|\.venv)'
include = '\.pyi?$'
target-version = ['py311']
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
